refactor: поменять JDK на 11